--- a/DictionaryApp/src/views/component/Header.form
+++ b/DictionaryApp/src/views/component/Header.form
@@ -22,18 +22,18 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="jLabel1" min="-2" pref="24" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="searchText1" min="-2" pref="432" max="-2" attributes="0"/>
+              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jComboBox1" min="-2" pref="78" max="-2" attributes="0"/>
+              <Component id="searchText1" min="-2" pref="468" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jComboBox1" pref="92" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jLabel1" pref="45" max="32767" attributes="0"/>
+          <Component id="jLabel1" pref="47" max="32767" attributes="0"/>
           <Component id="jComboBox1" alignment="1" max="32767" attributes="0"/>
           <Component id="searchText1" alignment="1" max="32767" attributes="0"/>
       </Group>
@@ -52,11 +52,9 @@
     <Component class="javax.swing.JComboBox" name="jComboBox1">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
+          <StringArray count="2">
+            <StringItem index="0" value="Anh - Vi&#x1ec7;t"/>
+            <StringItem index="1" value="Vi&#x1ec7;t - Anh"/>
           </StringArray>
         </Property>
       </Properties>
