--- a/DictionaryApp/src/views/component/Header.form
+++ b/DictionaryApp/src/views/component/Header.form
@@ -25,17 +25,17 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="searchText1" min="-2" pref="468" max="-2" attributes="0"/>
+              <Component id="searchText" min="-2" pref="468" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jComboBox1" pref="92" max="32767" attributes="0"/>
+              <Component id="searchOptions" pref="92" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="jLabel1" pref="47" max="32767" attributes="0"/>
-          <Component id="jComboBox1" alignment="1" max="32767" attributes="0"/>
-          <Component id="searchText1" alignment="1" max="32767" attributes="0"/>
+          <Component id="searchOptions" alignment="1" max="32767" attributes="0"/>
+          <Component id="searchText" alignment="1" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -47,9 +47,9 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="views.custom.SearchText" name="searchText1">
+    <Component class="views.custom.SearchText" name="searchText">
     </Component>
-    <Component class="javax.swing.JComboBox" name="jComboBox1">
+    <Component class="javax.swing.JComboBox" name="searchOptions">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="2">
